--- a/_config.yml
+++ b/_config.yml
@@ -7,15 +7,15 @@ permalink:        pretty
 <!-- relative_permalinks: true -->
 
 # Setup
-title:            Hyde
-tagline:          'A Jekyll theme'
+title:            Fiona Torzewska
+<!-- tagline:          'A Jekyll theme'
 description:      'A brazen two-column <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that pairs a prominent sidebar with uncomplicated content. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
 url:              http://hyde.getpoole.com
-baseurl:          /
+baseurl:          / -->
 
-author:
+<!-- author:
   name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  url:            https://twitter.com/mdo -->
 
 paginate:         5
 
